fixed scroll of modals for small screens and made create-tab-container stretch to the bottom of the screen

--- a/react-app/src/components/DeckPage/DeckPage.css
+++ b/react-app/src/components/DeckPage/DeckPage.css
@@ -6,7 +6,7 @@
 }
 
 .create-tab-container {
-    /* flex: 1 1 auto; */
+    flex: 1 1 auto;
     background-color: lightgray;
     display: flex;
     flex-direction: row;
